--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "nodemon ts-node-dev src/server.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
