--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,12 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "mysql2": "^3.6.1",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.3.1"
   }
 }
